...
    },
    "O que você escreveu pede cuidado": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "What you wrote calls for care"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Lo que escribiste pide cuidado"
...
